# genetic

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: nqueens.py  quadratic.py  tsp.py
genetic/: __init__.py  core.py  crossover.py  encodings.py  mutation.py  utils.py
tests/: test_mutation.py  test_mutation_flip.py  test_mutation_swap.py
