[tool.poetry]
name = "genetic"
version = "0.1.0"
description = "Genetic Algorithm Framework"
authors = ["Nima <sadev.inform@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
