[tool.poetry]
name = "genetic"
version = "0.1.0"
description = "Genetic Algorithm Framework"
authors = ["Nima <sadev.inform@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
isort = "^5.10.1"
pep8-naming = "^0.12.1"
flake8-isort = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
